#3548 Fix dependency screen icons